# ABC_HomewWork

./: CMakeLists.txt  bus.cpp  bus.h  car.cpp  car.h  container.cpp  container.h  main.cpp  transportation.cpp  transportation.h  truck.cpp  truck.h
documentation/: short_description  ПП.odt  ТТ.odt
results/: test1_out1  test2_out1.txt  test2_out2.txt
